# learngl

./: .gitignore  CMakeLists.txt  README.md  build.ps1
glad/include/glad/: glad.h
glad/src/: glad.c
include/: shader.h
include/glad/: glad.h
src/: glad.c  main.cpp  shader.cpp  shader.hpp
src/shaders/: fshader.frag  vshader.vert
